--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "webpack": "webpack serve",
     "watch": "webpack --progress --watch",
     "test": "rails test test/*",
+    "build": "NODE_ENV=production webpack",
     "update": "npx ncu -u"
   },
   "dependencies": {
