--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mini-css-extract-plugin": "^1.0.0",
     "node-sass": "^4.14.1",
     "npm-check-updates": "^9.1.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.1.2",
     "postcss-cli": "^8.1.0",
     "postcss-color-function": "^4.1.0",
@@ -50,6 +51,7 @@
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "tailwindcss": "^1.9.4",
+    "terser-webpack-plugin": "^5.0.3",
     "toastify-js": "^1.9.3",
     "turbolinks": "^5.2.0",
     "webpack": "^5.1.3",
