--- a/package.json
+++ b/package.json
@@ -6,59 +6,59 @@
     "dev": "overmind s -f DevProcfile -p 3000",
     "webpack": "webpack serve",
     "watch": "webpack --progress --watch",
-    "test": "rails test test/*",
+    "test": "npm run build && rails test test/*",
     "build": "NODE_ENV=production webpack",
     "update": "npx ncu -u"
   },
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@rails/ujs": "^6.0.3-4",
-    "@splidejs/splide": "^2.4.14",
-    "autoprefixer": "^10.0.1",
-    "babel-loader": "^8.1.0",
-    "babel-plugin-macros": "^2.8.0",
+    "@babel/core": "^7.14.2",
+    "@babel/plugin-transform-runtime": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@rails/ujs": "^6.0.3-7",
+    "@splidejs/splide": "^2.4.21",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-macros": "^3.1.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-preact": "^2.0.0",
-    "css-loader": "^5.0.0",
+    "css-loader": "^5.2.4",
     "csshake": "^1.5.3",
-    "cssnano": "^4.1.10",
+    "cssnano": "^5.0.2",
     "date-utils": "^1.2.21",
-    "eslint": "^7.11.0",
-    "eslint-config-eslint": "^6.0.0",
-    "eslint-plugin-react": "^7.21.5",
-    "glob": "^7.1.6",
+    "eslint": "^7.26.0",
+    "eslint-config-eslint": "^7.0.0",
+    "eslint-plugin-react": "^7.23.2",
+    "glob": "^7.1.7",
     "hoverintent": "^2.2.1",
-    "mini-css-extract-plugin": "^1.0.0",
-    "node-sass": "^4.14.1",
-    "npm-check-updates": "^9.1.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.4",
-    "postcss": "^8.1.2",
-    "postcss-cli": "^8.1.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-sass": "^6.0.0",
+    "npm-check-updates": "^11.5.12",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^8.2.15",
+    "postcss-cli": "^8.3.1",
     "postcss-color-function": "^4.1.0",
-    "postcss-custom-media": "^7.0.8",
-    "postcss-loader": "^4.0.4",
-    "postcss-media-minmax": "^4.0.0",
-    "postcss-mixins": "^7.0.1",
-    "postcss-nesting": "^7.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-simple-vars": "^6.0.1",
-    "preact": "^10.5.5",
+    "postcss-custom-media": "^8.0.0",
+    "postcss-loader": "^5.3.0",
+    "postcss-media-minmax": "^5.0.0",
+    "postcss-mixins": "^7.0.3",
+    "postcss-nesting": "^8.0.1",
+    "postcss-preset-env": "^5.3.0",
+    "postcss-simple-vars": "^6.0.3",
+    "preact": "^10.5.13",
     "preact-token-input": "^0.3.0",
     "rfs": "^9.0.3",
-    "sass-loader": "^10.0.3",
+    "sass-loader": "^11.1.1",
     "style-loader": "^2.0.0",
-    "tailwindcss": "^1.9.4",
-    "terser-webpack-plugin": "^5.0.3",
-    "toastify-js": "^1.9.3",
+    "tailwindcss": "^2.1.2",
+    "terser-webpack-plugin": "^5.1.2",
+    "toastify-js": "^1.11.0",
     "turbolinks": "^5.2.0",
-    "webpack": "^5.1.3",
-    "webpack-assets-manifest": "^3.1.1",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^3.11.0",
+    "webpack": "^5.37.0",
+    "webpack-assets-manifest": "^5.0.6",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2",
     "webpack-shell-plugin": "^0.5.0"
   }
 }
