--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "webpack": "webpack serve",
     "watch": "webpack --progress --watch",
     "test": "npm run build && rails test test/*",
-    "build": "NODE_ENV=production webpack",
+    "build": "NODE_ENV=production ./node_modules/.bin/webpack",
     "update": "npx ncu -u"
   },
   "dependencies": {
